fixed small double border bug on fill in blank cards

--- a/src/components/cards/FillInBlank/FillInBlankTop.scss
+++ b/src/components/cards/FillInBlank/FillInBlankTop.scss
@@ -15,7 +15,7 @@
       color: #ff3d33;
     }
 
-    span {
+    span.dotted-border {
       border-bottom: 2px dotted #cacaca;
       &:hover {
         border-bottom: 2px dotted #5a5a5a;
